--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -1086,8 +1086,3 @@ $visa-theme: mat.define-light-theme((
     margin: 0 0 10px !important;
 }
 
-.centered-content-area {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
